--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -153,5 +153,9 @@
 
     <div class="card-container">
         <input type="file" name="uploadfile" id="img-upload" (change)="onFileUpload($event.target.files)" />
+        <audio controls>
+            <source src="./assets/audio/piano2.wav" type="audio/wav">
+            Sorry - Ihr Browser hat keine Unterstützung für dieses Audio-Format.
+        </audio>
     </div>
 </div>
