--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -140,6 +140,11 @@
     }
 </style>
 
+<script>
+
+
+</script>
+
 <!-- Header -->
 <div class="toolbar" role="banner">
     Welcome to the CV Frontend!
@@ -153,6 +158,7 @@
 
     <div class="card-container">
         <input type="file" name="uploadfile" id="img-upload" (change)="onFileUpload($event)" />
+        <input type="file" name="uploadAudio" id="Test" (change)="test($event)" />
         <audio controls>
             <source src="./assets/audio/piano2.wav" type="audio/wav">
             Sorry - Ihr Browser hat keine Unterstützung für dieses Audio-Format.
