--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -152,12 +152,12 @@
     <p>Lade dein Bild hier hoch, um eine Analyse von Azure Vision zu erhalten.</p>
 
     <div class="card-container">
-        <input type="file" name="uploadfile" id="img-upload" (change)="onFileUpload($event)" />
-        <!-- <input type="file" name="uploadAudio" id="Test" (change)="test($event)" /> -->
+        <input type="file" name="uploadfile" id="img-upload" (change)="onFileUpload($event)" /> Test:
+        <input type="file" name="uploadAudio" id="Test" (change)="test($event)" />
         <audio controls>
             <source src="./assets/audio/piano2.wav" type="audio/wav">
             Sorry - Ihr Browser hat keine Unterstützung für dieses Audio-Format.
-        </audio>-->
+        </audio>
     </div>
     <div class="card-container">
         <img id="img-prev" />
