--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -17,8 +17,15 @@
         margin: 8px 0;
     }
     
+    h1 {
+        font-size: 28pt;
+        margin-top: 1em;
+    }
+    
     p {
-        margin: 0;
+        margin-top: 0;
+        font-size: 14pt;
+        margin-bottom: 0.5em;
     }
     
     .toolbar {
@@ -148,7 +155,7 @@
 <div class="content" role="main">
 
     <!-- Upload -->
-    <h2>Bild hochladen</h2>
+    <h1>Bild Upload</h1>
     <p>Lade dein Bild hier hoch, um eine Analyse von Azure Vision zu erhalten.</p>
 
     <div class="card-container">
