--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -165,5 +165,6 @@
     </div>
     <div class="card-container">
         <img id="img-prev" />
+        <p id="description"></p>
     </div>
 </div>
