--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -154,7 +154,7 @@
     }
 </style>
 
-<div class="content" role="main" style="background-color: #ededed">
+<div class="content" role="main" style="background-color: #ededed; margin-bottom: 1em;">
 
     <!-- Upload -->
     <h1>Bild Upload</h1>
