player src working; autoplay attribute added

--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -176,10 +176,7 @@
         <p>Ihr Audio wird geladen...</p>
     </div>
     <div class="card-container">
-        <audio controls id="audioPlayer" style="display: none;">
-                <source src="" type="audio/wav" id="audioSrc">
-                Sorry - Ihr Browser hat keine Unterstützung für dieses Audio-Format.
-            </audio>
+        <audio controls id="audioPlayer" style="display: none;" autoplay></audio>
     </div>
     <div class="card-container" style="display: flex; flex-direction: row; flex-wrap: nowrap; justify-content: center; align-items: center;">
         <img id="img-prev" />
