multiple files upload fix

--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -175,8 +175,7 @@
     <div class="card-container" id="loadingNotif" style="display: none;">
         <p>Ihr Audio wird geladen...</p>
     </div>
-    <div class="card-container">
-        <audio controls id="audioPlayer" style="display: none;" autoplay></audio>
+    <div class="card-container" id="audioDiv">
     </div>
     <div class="card-container" style="display: flex; flex-direction: row; flex-wrap: nowrap; justify-content: center; align-items: center;">
         <img id="img-prev" />
