--- a/CV_FE/cv-frontend/src/app/app.component.html
+++ b/CV_FE/cv-frontend/src/app/app.component.html
@@ -166,7 +166,7 @@
 
     <!-- Upload -->
     <h1>Bild Upload</h1>
-    <p>Lade dein Bild hier hoch, um eine Analyse von Azure Vision zu erhalten.</p>
+    <p>Lade dein Bild hier hoch, um eine Analyse von Azure Vision zu erhalten. (Bild muss aufgrund von Beschränkungen von Microsoft kleiner als 4MB sein)</p>
 
     <div class="card-container">
         <input type="file" accept="image/*" name="uploadfile" id="img-upload" (change)="onFileUpload($event)" style="display: none;" />
